1 paragraph and 3 headings added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Monika Proczek</h1>
+<span>Biotechnolog, przyszły Frontend Developer</span>
+<p>
+    Mam na imię <b>Monika</b>! Uczę się programować od kilku miesięcy, a ta strona to kolejny krok w rozwoju umiejętności pracy z HTML oraz GitHub. Czerpię przyjemność z nauki i lubię podejmować wyzwania.
+</p>
+<h2>Doświadczenie zawodowe</h2>
+<h2>Wykształcenie</h2>
+<h2>Zaiteresowania</h2>
