--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
-<h1>Monika Proczek</h1>
-<span>Biotechnolog, przyszły Frontend Developer</span>
-<p>
-    Mam na imię <b>Monika</b>! Uczę się programować od kilku miesięcy, a ta strona to kolejny krok w rozwoju umiejętności pracy z HTML oraz GitHub. Czerpię przyjemność z nauki i lubię podejmować wyzwania. 
-</p>
-<h2>Doświadczenie zawodowe</h2>
-<ul>
-    <li>2022-2023: Diagnostyka S.A., Technolog Laboratoryjny - Młodszy Asystent</li>
-    <li>2018-2019: Etiuda Krakowskie Centrum Biurowe, Recepcjonista</li>
-</ul>
-<h2>Wykształcenie</h2>
-<ul>
-    <li>2019-2021: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Magister, Biotechnologia molekularna</li>
-    <li>2015-2019: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Licencjat, Biotechnologia</li>
-    <li>2003-2015: <a href="https://www.gov.pl/web/zsmkrosno/status-prawny" target="_blank"> Ogólnokształcąca Szkoła Muzyczna I i II st. w Krośnie</a>, Instrumentalistyka - Fortepian </li>
-</ul>
-<h2>Zaiteresowania</h2>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Moje testowe CV, ćwiczenie pracy z GitHub">
+	<meta name="keywords" content="Curriculum Vitae, CV">
+	<meta name="author" content="Monika Proczek">
+    <a href="https://www.freepik.com/icons/user"></a>
+    <title>Curriculum Vitae</title>
+</head>
+<body>
+    <br/>
+    <img src="user-avatar_7824721.png" alt="Icon by Micaela from freepik" widh="150px" height="150px"/>
+    <h1>Monika Proczek</h1>
+    <br/>
+    <span>Biotechnolog, przyszły Frontend Developer</span>
+    <p>
+        Mam na imię <b>Monika</b>! Uczę się programować od kilku miesięcy, a ta strona to kolejny krok w rozwoju umiejętności pracy z HTML oraz GitHub. Czerpię przyjemność z nauki i lubię podejmować wyzwania. 
+    </p>
+    <h2>Doświadczenie zawodowe</h2>
+    <ul>
+        <li>2022-2023: Diagnostyka S.A., Technolog Laboratoryjny - Młodszy Asystent</li>
+        <li>2018-2019: Etiuda Krakowskie Centrum Biurowe, Recepcjonista</li>
+    </ul>
+    <h2>Wykształcenie</h2>
+    <ul>
+        <li>2019-2021: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Magister, Biotechnologia molekularna</li>
+        <li>2015-2019: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Licencjat, Biotechnologia</li>
+        <li>2003-2015: <a href="https://www.gov.pl/web/zsmkrosno/status-prawny" target="_blank"> Ogólnokształcąca Szkoła Muzyczna I i II st. w Krośnie</a>, Instrumentalistyka - Fortepian </li>
+    </ul>
+    <h2>Zaiteresowania</h2>
+</body>
+</html>
