style tag removed from index.html, style.css added

--- a/index.html
+++ b/index.html
@@ -7,23 +7,11 @@
         <meta name="author" content="Monika Proczek">
         <a href="https://www.freepik.com/icons/user"></a>
         <title>Monika Proczek - Curriculum Vitae</title>
-        <style>
-            h2{
-                font-size: 28px;
-            }
-
-            h1{
-                font-size: 36px;
-            }
-
-            span{
-                color: grey;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <br/>
-        <img src="user-avatar_7824721.png" alt="Icon by Micaela from freepik" widh="150px" height="150px"/>
+        <img src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
         <h1>Monika Proczek</h1>
         <span>Biotechnolog, przyszły Frontend Developer</span>
         <p>
