index.html modified, style.css - flexbox

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     <body>
         <header>
             <img src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
-            <h1>Monika Proczek</h1>
-            <span>Biotechnolog, przyszły Frontend Developer</span>
+            <div>
+                <h1>Monika Proczek</h1>
+                <span>Biotechnolog, przyszły Frontend Developer</span>
+            </div>
+            <address>
+                <ul>
+                    <li>Numer telefonu: --- --- ---</li>
+                    <li>Email: --- --- ---</li>
+                    <li>Data urodzenia: --- --- ---</li>
+                    <li>Miejsce zamieszkania: --- --- ---</li>
+                </ul>
+            </address>
         </header>
         <main>
             <section>
@@ -32,9 +42,9 @@
             <section>
                 <h2>Wykształcenie</h2>
                 <ul>
-                    <li>2019-2021: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Magister, Biotechnologia molekularna</li>
-                    <li>2015-2019: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Licencjat, Biotechnologia</li>
-                    <li>2003-2015: <a href="https://www.gov.pl/web/zsmkrosno/status-prawny" target="_blank"> Ogólnokształcąca Szkoła Muzyczna I i II st. w Krośnie</a>, Instrumentalistyka - Fortepian </li>
+                    <li>2019-2021: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Magister, <i>Biotechnologia molekularna</i></li>
+                    <li>2015-2019: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Licencjat, <i>Biotechnologia</i></li>
+                    <li>2003-2015: <a href="https://www.gov.pl/web/zsmkrosno/status-prawny" target="_blank"> Ogólnokształcąca Szkoła Muzyczna I i II st. w Krośnie</a>, <i>Instrumentalistyka - Fortepian</i></li>
                 </ul>
             </section>
             <section>
@@ -47,9 +57,9 @@
             <section>
                 <h2>Zaiteresowania</h2>
                 <ul>
-                    <li>Kino</li>
                     <li>Kryminalne historie</li>
                     <li>Podróże</li>
+                    <li>Kino</li>
                 </ul>
             </section>
         </main>
