work with icons

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
             <address>
                 <ul>
-                    <li>Numer telefonu: --- --- ---</li>
-                    <li>Email: --- --- ---</li>
-                    <li>Data urodzenia: --- --- ---</li>
-                    <li>Miejsce zamieszkania: --- --- ---</li>
+                    <li><img src="images/phone.png"/><b>Numer telefonu:</b> --- --- ---</li>
+                    <li><img src="images/mail.png"/><b>Email:</b> --- --- ---</li>
+                    <li><img src="images/birthday-cake.png"/><b>Data urodzenia:</b> --- --- ---</li>
+                    <li><img src="images/pin.png"/><b>Miejsce zamieszkania:</b> --- --- ---</li>
                 </ul>
             </address>
         </header>
