work with classes

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     </head>
     <body>
         <header>
-            <img src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
+            <img class="circle" src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
             <div>
                 <h1>Monika Proczek</h1>
                 <span>Biotechnolog, przyszły Frontend Developer</span>
             </div>
             <address>
                 <ul>
-                    <li><img src="images/phone.png"/><b>Numer telefonu:</b> --- --- ---</li>
-                    <li><img src="images/mail.png"/><b>Email:</b> --- --- ---</li>
-                    <li><img src="images/birthday-cake.png"/><b>Data urodzenia:</b> --- --- ---</li>
-                    <li><img src="images/pin.png"/><b>Miejsce zamieszkania:</b> --- --- ---</li>
+                    <li><img class="address-icon circle" src="images/phone.png"/><b>Numer telefonu:</b> --- --- ---</li>
+                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> --- --- ---</li>
+                    <li><img class="address-icon circle" src="images/birthday-cake.png"/><b>Data urodzenia:</b> --- --- ---</li>
+                    <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania:</b> --- --- ---</li>
                 </ul>
             </address>
         </header>
