hobbies section modified

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img class="circle" src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
+            <img class="profile-picture circle" src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
             <div>
                 <h1>Monika Proczek</h1>
                 <span>Biotechnolog, przyszły Frontend Developer</span>
@@ -55,11 +55,35 @@
                 </ul>
             </section>
             <section>
-                <h2>Zaiteresowania</h2>
-                <ul>
-                    <li>Kryminalne historie</li>
-                    <li>Podróże</li>
-                    <li>Kino</li>
+                <h2>Zainteresowania</h2>
+                <ul class="hobbies" >
+                    <li>
+                        <img src="images/newspaper.png"/>
+                        <div>
+                            <h3>Kryminalne historie</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/airport.png"/>
+                        <div>  
+                            <h3>Podróże</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/video.png"/>
+                        <div>
+                            <h3>Kino</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
+                            </p>
+                        </div>
+                    </li>
                 </ul>
             </section>
         </main>
