classes/links and their style modified

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
             <div>
                 <h1>Monika Proczek</h1>
                 <span>Biotechnolog, przyszły Frontend Developer</span>
+                <div>
+                    <a class="cv-download-link" href="https://store4.gofile.io/download/11d8921b-2eff-4c26-9d8a-c1cff5f596f8/Monika%20Proczek%20-%20Curriculum%20Vitae.pdf">Pobierz CV</a>
+                </div> 
             </div>
             <address>
                 <ul>
-                    <li><img class="address-icon circle" src="images/phone.png"/><b>Numer telefonu:</b> --- --- ---</li>
-                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> --- --- ---</li>
-                    <li><img class="address-icon circle" src="images/birthday-cake.png"/><b>Data urodzenia:</b> --- --- ---</li>
-                    <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania:</b> --- --- ---</li>
+                    <li><img class="address-icon circle" src="images/phone.png"/><b>Numer telefonu:</b> 123 456 789</li>
+                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> example.mail@example.com</li>
+                    <li><img class="address-icon circle" src="images/birthday-cake.png"/><b>Data urodzenia:</b> 00.00.0000</li>
+                    <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania:</b> Example city</li>
                 </ul>
             </address>
         </header>
@@ -35,8 +38,8 @@
             <section>
                 <h2>Doświadczenie zawodowe</h2>
                 <ul>
-                    <li>2022-2023: Diagnostyka S.A., Technolog Laboratoryjny - Młodszy Asystent</li>
-                    <li>2018-2019: Etiuda Krakowskie Centrum Biurowe, Recepcjonista</li>
+                    <li>2022-2023: <a href="https://grupadiagnostyka.pl/" target="_blank"> Diagnostyka S.A.</a>, Technolog Laboratoryjny - Młodszy Asystent</li>
+                    <li>2018-2019: <a href="https://nowa.pilotow2.eu/" target="_blank">Etiuda Krakowskie Centrum Biurowe</a>, Recepcjonista</li>
                 </ul>
             </section>
             <section>
