--- a/index.html
+++ b/index.html
@@ -10,85 +10,87 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <header>
-            <img class="profile-picture circle" src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
-            <div>
-                <h1>Monika Proczek</h1>
-                <span>Biotechnolog, przyszły Frontend Developer</span>
+        <div class="container">
+            <header>
+                <img class="profile-picture circle" src="user-avatar_7824721.png" alt="Icon by Micaela from freepik"/>
                 <div>
-                    <a class="cv-download-link" href="https://store4.gofile.io/download/11d8921b-2eff-4c26-9d8a-c1cff5f596f8/Monika%20Proczek%20-%20Curriculum%20Vitae.pdf">Pobierz CV</a>
-                </div> 
-            </div>
-            <address>
-                <ul>
-                    <li><img class="address-icon circle" src="images/phone.png"/><b>Numer telefonu:</b> 123 456 789</li>
-                    <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> example.mail@example.com</li>
-                    <li><img class="address-icon circle" src="images/birthday-cake.png"/><b>Data urodzenia:</b> 00.00.0000</li>
-                    <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania:</b> Example city</li>
-                </ul>
-            </address>
-        </header>
-        <main>
-            <section>
-                <h2>O mnie</h2>
-                <p>
-                    Mam na imię <b>Monika</b>! Uczę się programować od kilku miesięcy, a ta strona to kolejny krok w rozwoju umiejętności pracy z HTML oraz GitHub. Czerpię przyjemność z nauki i lubię podejmować wyzwania. 
-                </p>
-            </section>
-            <section>
-                <h2>Doświadczenie zawodowe</h2>
-                <ul>
-                    <li>2022-2023: <a href="https://grupadiagnostyka.pl/" target="_blank"> Diagnostyka S.A.</a>, Technolog Laboratoryjny - Młodszy Asystent</li>
-                    <li>2018-2019: <a href="https://nowa.pilotow2.eu/" target="_blank">Etiuda Krakowskie Centrum Biurowe</a>, Recepcjonista</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Wykształcenie</h2>
-                <ul>
-                    <li>2019-2021: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Magister, <i>Biotechnologia molekularna</i></li>
-                    <li>2015-2019: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Licencjat, <i>Biotechnologia</i></li>
-                    <li>2003-2015: <a href="https://www.gov.pl/web/zsmkrosno/status-prawny" target="_blank"> Ogólnokształcąca Szkoła Muzyczna I i II st. w Krośnie</a>, <i>Instrumentalistyka - Fortepian</i></li>
-                </ul>
-            </section>
-            <section>
-                <h2>Języki</h2>
-                <ul>
-                    <li>Angielski - B2</li>
-                    <li>Polski - ojczysty</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Zainteresowania</h2>
-                <ul class="hobbies" >
-                    <li>
-                        <img src="images/newspaper.png"/>
-                        <div>
-                            <h3>Kryminalne historie</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="images/airport.png"/>
-                        <div>  
-                            <h3>Podróże</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="images/video.png"/>
-                        <div>
-                            <h3>Kino</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
-                            </p>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-        </main>
+                    <h1>Monika Proczek</h1>
+                    <span>Biotechnolog, przyszły Frontend Developer</span>
+                    <div>
+                        <a class="cv-download-link" href="https://store2.gofile.io/download/01118049-25eb-451f-90e4-bea903de1cd8/Monika%20Proczek%20-%20Curriculum%20Vitae.pdf">Pobierz CV</a>
+                    </div> 
+                </div>
+                <address>
+                    <ul>
+                        <li><img class="address-icon circle" src="images/phone.png" alt=" "/><b>Numer telefonu:</b> 123 456 789</li>
+                        <li><img class="address-icon circle" src="images/mail.png" alt=" "/><b>Email:</b> example.mail@example.com</li>
+                        <li><img class="address-icon circle" src="images/birthday-cake.png" alt=" "/><b>Data urodzenia:</b> 00.00.0000</li>
+                        <li><img class="address-icon circle" src="images/pin.png" alt=" "/><b>Miejsce zamieszkania:</b> Example city</li>
+                    </ul>
+                </address>
+            </header>
+            <main>
+                <section>
+                    <h2>O mnie</h2>
+                    <p>
+                        Mam na imię <b>Monika</b>! Uczę się programować od kilku miesięcy, a ta strona to kolejny krok w rozwoju umiejętności pracy z HTML oraz GitHub. Czerpię przyjemność z nauki i lubię podejmować wyzwania. 
+                    </p>
+                </section>
+                <section>
+                    <h2>Doświadczenie zawodowe</h2>
+                    <ul>
+                        <li>2022-2023: <a href="https://grupadiagnostyka.pl/" target="_blank"> Diagnostyka S.A.</a>, Technolog Laboratoryjny - Młodszy Asystent</li>
+                        <li>2018-2019: <a href="https://nowa.pilotow2.eu/" target="_blank">Etiuda Krakowskie Centrum Biurowe</a>, Recepcjonista</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Wykształcenie</h2>
+                    <ul>
+                        <li>2019-2021: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Magister, <i>Biotechnologia molekularna</i></li>
+                        <li>2015-2019: <a href="https://www.uj.edu.pl/" target="_blank">Uniwersytet Jagielloński</a>, Licencjat, <i>Biotechnologia</i></li>
+                        <li>2003-2015: <a href="https://www.gov.pl/web/zsmkrosno/status-prawny" target="_blank"> Ogólnokształcąca Szkoła Muzyczna I i II st. w Krośnie</a>, <i>Instrumentalistyka - Fortepian</i></li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Języki</h2>
+                    <ul>
+                        <li>Angielski - B2</li>
+                        <li>Polski - ojczysty</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Zainteresowania</h2>
+                    <ul class="hobbies" >
+                        <li>
+                            <img src="images/newspaper.png" alt=" "/>
+                            <div>
+                                <h3>Kryminalne historie</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/airport.png" alt=" "/>
+                            <div>  
+                                <h3>Podróże</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/video.png" alt=" "/>
+                            <div>
+                                <h3>Kino</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ea sapiente voluptate impedit doloremque exercitationem.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+        </div>    
     </body>
 </html>
